# rdp123

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.gitea/workflows/: ci.yml
assets/: AppIcon.icns
crates/rdp123-app/: Cargo.toml  build.rs
crates/rdp123-app/src/: delegate.rs  login_item.rs  main.rs  promise.rs  settings.rs  ui.rs  view.rs  web_auth.rs  window.rs
crates/rdp123-core/: Cargo.toml
crates/rdp123-core/examples/: egfx_replay.rs
crates/rdp123-core/src/: audio.rs  framebuffer.rs  gfx.rs  keymap.rs  lib.rs  profile.rs  rdsaad.rs  secrets.rs  session.rs  terminal.rs  tls.rs  wol.rs
scripts/: make-signing-identity.sh
xtask/: Cargo.toml
xtask/src/: main.rs
