[package]
name = "rdp123-app"
description = "RDP123 macOS menu-bar RDP client (AppKit front-end)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "rdp123"
path = "src/main.rs"

[dependencies]
rdp123-core.workspace = true

objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
objc2-core-foundation.workspace = true
objc2-quartz-core.workspace = true
objc2-core-graphics.workspace = true
objc2-io-surface.workspace = true
objc2-service-management.workspace = true
block2.workspace = true
dispatch2.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
